--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,115 @@
-pandas
-numpy
-sklearn
-jupyter-dash
-jupyter_dash
-dash
-dash_core_components
-dash_html_components
-dash_table
-plotly
+-e git+git@bitbucket.org:annalect/annalectpy.git@43079286ff4995cff0726c3fe92dc825933bf6a5#egg=annalectpy
+ansi2html==1.6.0
+appnope==0.1.2
+backcall==0.2.0
+bokeh==2.3.0
+boto3==1.17.72
+botocore==1.20.72
+Brotli==1.0.9
+certifi==2020.12.5
+chardet==4.0.0
+click==8.0.0
+cloudpickle==1.6.0
+colorcet==2.0.6
+configparser==4.0.2
+cycler==0.10.0
+Cython==0.29.23
+dash==1.20.0
+dash-core-components==1.16.0
+dash-html-components==1.1.3
+dash-renderer==1.9.1
+dash-table==4.11.3
+dask==2021.4.1
+datashader==0.12.0
+datashape==0.5.2
+decorator==4.4.2
+distributed==2021.4.1
+et-xmlfile==1.1.0
+Flask==2.0.1
+Flask-Compress==1.9.0
+fsspec==2021.4.0
+future==0.18.2
+gunicorn==20.1.0
+hdbscan==0.8.26
+HeapDict==1.0.1
+holoviews==1.14.1
+idna==2.10
+imageio==2.9.0
+importlib-metadata==4.0.1
+ipykernel==5.5.5
+ipython==7.23.1
+ipython-genutils==0.2.0
+itsdangerous==2.0.1
+jdcal==1.4.1
+jedi==0.18.0
+Jinja2==3.0.0
+jmespath==0.10.0
+joblib==0.17.0
+jupyter-client==6.1.12
+jupyter-core==4.7.1
+jupyter-dash==0.4.0
+kiwisolver==1.3.1
+llvmlite==0.36.0
+locket==0.2.1
+lz4==3.1.3
+Markdown==3.3.4
+MarkupSafe==2.0.0
+matplotlib==3.3.4
+matplotlib-inline==0.1.2
+msgpack==1.0.2
+multipledispatch==0.6.0
+networkx==2.5.1
+numba==0.53.1
+numpy==1.20.1
+openpyxl==3.0.3
+packaging==20.9
+pandas==1.2.4
+panel==0.11.3
+param==1.10.1
+parso==0.8.2
+partd==1.2.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.2.0
+plotly==4.14.3
+prompt-toolkit==3.0.18
+psutil==5.8.0
+psycopg2==2.8.4
+ptyprocess==0.7.0
+pyct==0.4.8
+Pygments==2.9.0
+pynndescent==0.5.2
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2021.1
+pyviz-comms==2.0.1
+PyWavelets==1.1.1
+PyYAML==5.4.1
+pyzmq==22.0.3
+requests==2.25.1
+retrying==1.3.3
+s3fs==0.4.0
+s3transfer==0.4.2
+scikit-image==0.18.1
+scikit-learn==0.24.2
+scipy==1.6.3
+seaborn==0.11.1
+six==1.16.0
+sklearn==0.0
+sortedcontainers==2.3.0
+tblib==1.7.0
+threadpoolctl==2.1.0
+tifffile==2021.4.8
+toolz==0.11.1
+tornado==6.1
+tqdm==4.60.0
+traitlets==5.0.5
+typing-extensions==3.10.0.0
+umap-learn==0.5.1
+urllib3==1.26.4
+wcwidth==0.2.5
+Werkzeug==2.0.1
+xarray==0.18.0
+XlsxWriter==1.4.3
+zict==2.0.0
+zipp==3.4.1
